--- a/stylesheets/app.sass
+++ b/stylesheets/app.sass
@@ -35,10 +35,10 @@ dl
   padding-right: 50px
 
 .feature
-  height: 250px !important
+  min-height: 150px !important
   line-height: 250px !important
   width: 250px
-  border-radius: 30%
+  border-radius: 50px
   background: #fff8e1
   padding: 30px
 
