--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -34,10 +34,10 @@ dl dd {
   padding-right: 50px; }
 
 .feature {
-  height: 250px !important;
+  min-height: 150px !important;
   line-height: 250px !important;
   width: 250px;
-  border-radius: 30%;
+  border-radius: 50px;
   background: #fff8e1;
   padding: 30px; }
 
