--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -46,3 +46,23 @@ dl dd {
 
 .inb {
   display: inline-block; }
+
+#quine-div {
+  width: 100%;
+  height: 600px;
+  overflow: scroll; }
+  #quine-div pre {
+    width: 100%;
+    font-size: 1rem !important; }
+
+::-webkit-scrollbar {
+  width: 8px;
+  background: #eee; }
+
+::-webkit-scrollbar-track {
+  width: 8px;
+  background: #eee; }
+
+::-webkit-scrollbar-thumb {
+  width: 8px;
+  background: #aaa; }
