--- a/stylesheets/app.sass
+++ b/stylesheets/app.sass
@@ -47,4 +47,26 @@ dl
 
 .inb
   display: inline-block
-  
+
+
+#quine-div
+  width: 100%
+  height: 600px
+  overflow: scroll
+
+  pre
+    width: 100%
+    font-size: 1rem !important
+
+
+::-webkit-scrollbar
+  width: 8px
+  background: #eee
+
+::-webkit-scrollbar-track
+  width: 8px
+  background: #eee
+
+::-webkit-scrollbar-thumb
+  width: 8px
+  background: #aaa
