--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -50,10 +50,17 @@ dl dd {
 #quine-div {
   width: 100%;
   height: 600px;
-  overflow: scroll; }
+  overflow-y: scroll;
+  overflow-x: hidden;
+  border: 1px #dadada solid;
+  border-radius: 3px;
+  box-shadow: 0 0 10px #dadada; }
   #quine-div pre {
     width: 100%;
-    font-size: 1rem !important; }
+    background: transparent !important;
+    font-size: 1em !important; }
+    #quine-div pre code {
+      background: transparent !important; }
 
 ::-webkit-scrollbar {
   width: 8px;
